fixed navbar and adjusted spacing

--- a/css/media_queries.css
+++ b/css/media_queries.css
@@ -1,10 +1,14 @@
-@media only screen and (min-width: 320px) {
+@media only screen and (min-width: 200px) {
+
+	.parallax {
+		min-height: 500px;
+	}
+
 	p {
 		font-size: 17px;
 	}
 
 	ul a {
-		margin-left: 15%;
 		font-size: 15px;
 	}
 
@@ -48,10 +52,6 @@
 	header h1 {
 		margin-left: 5%;
 	}
-
-	ul {
-		padding-right: 14%;
-	}
 }
 
 
@@ -70,7 +70,8 @@
     cursor: pointer;
     padding: 15px;
     display: block;
-    margin-bottom: 2%;
+    padding-bottom: 2%;
+    background-color: black;
   }
 
   .line {
@@ -103,11 +104,13 @@
 
 
 
+@media only screen and (min-width: 481px) {
 
+	.parallax {
+		min-height: 600px;
+	}
 
-
-
-
+}
 
 
 
@@ -127,16 +130,9 @@
 
 @media only screen and (min-width: 520px) {
 
-	.parallax {
-		min-height: 350px;
-	}
 
 	.dishes {
 		padding-left: 8%;
-	}
-
-	ul {
-		padding-right: 8%;
 	}
 
 }
@@ -159,9 +155,6 @@
 		margin-right: 15%;
 	}
 
-	ul {
-		margin-left: 10%;
-	}
 }
 
 @media only screen and (min-width: 600px) {
@@ -251,9 +244,6 @@
 		padding-right: 10%;
 	}
 
-	.parallax {
-		min-height: 400px;
-	}
 
 	.flickity-page-dots {
 		height: 20px;
@@ -349,6 +339,10 @@
 
 @media only screen and (min-width: 950px) {
 
+		.parallax {
+		min-height: 700px;
+	}
+
 	header img {
     	margin-left: 25%;
 	}
@@ -429,9 +423,6 @@
     	margin-left: 27%;
 	}
 
-	.parallax {
-		min-height: 500px;
-	}
 
 	.catering img {
 		margin-left: 30%;
@@ -451,7 +442,4 @@
 		padding-right: 30%;
 	}
 
-	ul {
-		padding-right: 12%;
-	}
 }
